# gpp

./: .gitignore  CMakeLists.txt  main.cpp
src/: parameters.hpp  typedefs.hpp
src/kernel/: exp_quad.hpp  kernel.hpp
tests/: CMakeLists.txt  TestParameters.cpp
